# Kv-code

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .prettierignore  AGENTS.md  LICENSE  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.codex/environments/: environment.toml
.devcontainer/: Dockerfile.secure  README.md  devcontainer.json  devcontainer.secure.json  post_install.py
.github/: CODEOWNERS  blob-size-allowlist.txt  dependabot.yaml
.github/scripts/: build-codex-package-archive.sh  run-argument-comment-lint-bazel.sh  rusty_v8_bazel.py  test_run_bazel_with_buildbuddy.py  test_v8_canary_changes.py  v8_canary_changes.py  verify_bazel_clippy_lints.py  verify_cargo_workspace_manifests.py  verify_tui_core_boundary.py
.github/workflows/: bazel.yml  blocking-ci.yml  cargo-deny.yml  issue-deduplicator.yml  issue-labeler.yml  issue-translator.yml  postmerge-ci.yml  python-runtime-build.yml  python-runtime-release.yml  python-sdk-release.yml  repo-checks.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-ci.yml  rust-release-prepare.yml  rust-release-windows.yml  rust-release-zsh.yml  rust-release.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml
.kv-code/environments/: environment.toml  setup.py
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
codex-cli/: package.json
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/tui/: tooltips.txt
docs/: install.md
kv-code-cli/: .npmignore  package.json
kv-code-cli/scripts/: README.md  build_npm_package.py  postinstall.js
kv-code-rs/: Cargo.toml  default.nix
kv-code-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
kv-code-rs/app-server-daemon/: README.md
kv-code-rs/app-server-protocol/: Cargo.toml
kv-code-rs/app-server-test-client/: README.md
kv-code-rs/app-server-transport/: Cargo.toml
kv-code-rs/arg0/: Cargo.toml
kv-code-rs/backend-client/: Cargo.toml
kv-code-rs/backend-client/src/: client.rs
kv-code-rs/bwrap/: BUILD.bazel  build.rs
kv-code-rs/cli/: BUILD.bazel  Cargo.toml
kv-code-rs/cloud-tasks/: Cargo.toml
kv-code-rs/cloud-tasks-client/: Cargo.toml
kv-code-rs/config/: Cargo.toml
kv-code-rs/core-api/: Cargo.toml
kv-code-rs/core-plugins/: Cargo.toml
kv-code-rs/core/tests/remote_env_windows/: BUILD.bazel  README.md  remote_env_windows_test.rs
kv-code-rs/kv-code-experimental-api-macros/: BUILD.bazel  Cargo.toml
kv-code-rs/kv-code-home/: BUILD.bazel  Cargo.toml
scripts/: build_codex_package.py  build_kv_code_package.py  debug-codex.sh  format.py  list-bazel-clippy-targets.sh  list-bazel-release-targets.sh  mock_responses_websocket_server.py  run_tui_with_exec_server.sh  stage_npm_packages.py  start-codex-exec.sh  test-remote-env.sh
(+515 files in other folders)
