[package]
name = "kv-code-experimental-api-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_experimental_api_macros"
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints]
workspace = true
