[package]
edition.workspace = true
license.workspace = true
name = "kv-code-home"
version.workspace = true

[lib]
name = "codex_home"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-utils-absolute-path = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
