load("//bazel/rules/testing/wine:wine.bzl", "wine_rust_test")

wine_rust_test(
    name = "smoke-test",
    timeout = "short",
    srcs = ["remote_env_windows_test.rs"],
    crate_name = "remote_env_windows_test",
    crate_root = "remote_env_windows_test.rs",
    host_binaries = {
        "codex-app-server": "//kv-code-rs/app-server:codex-app-server",
    },
    windows_binaries = {
        "wine-windows-exec-server": "//kv-code-rs/exec-server/testing:windows-exec-server",
    },
    deps = [
        "//kv-code-rs/app-server-protocol",
        "//kv-code-rs/app-server/tests/common",
        "//kv-code-rs/core/tests/common",
        "//kv-code-rs/exec-server",
        "//kv-code-rs/exec-server/testing:wine-exec-server-test-support",
        "//kv-code-rs/features",
        "//kv-code-rs/protocol",
        "//kv-code-rs/utils/path-uri",
        "@crates//:anyhow",
        "@crates//:pretty_assertions",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)
